# grab-receipts-exporter

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: design.md
migrations/: 001_create_grab_receipts.sql  002_create_views.sql
src/grab_receipts_exporter/: cli.py
tests/: test_cli.py
